--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,18 +4,18 @@
         <h2 class="about-title">Teacher</h2>
         <div class="about-tab">
         <picture class="about-picture">
-            <source srcset="./images/content/mobile/about-mob.webp 1x,  ./images/content/mobile/about-mob@2x.webp 2x"
-                type="image/webp" media="(max-width: 767px)">
-            <source srcset="./images/content/mobile/about-mob.jpg 1x, ./images/content/mobile/about-mob@2x.jpg  2x"
-                type="image/jpg" media="(max-width: 767px)">
-            <source srcset="./images/content/tablet/about-tab.webp 1x, ./images/content/tablet/about-tab@2x.webp  2x"
-                type="image/webp" media="(min-width: 768px)">
-            <source srcset="./images/content/tablet/about-tab.jpg 1x, ./images/content/tablet/about-tab@2x.jpg  2x"
-                type="image/jpg" media="(min-width: 768px)">
             <source srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp 2x"
                 type="image/webp" media="(min-width: 1366px)">
             <source srcset="./images/content/desktop/about-desk.jpg 1x, ./images/content/desktop/about-desk@2x.jpg  2x"
                 type="image/jpg" media="(min-width: 1366px)">
+            <source srcset="./images/content/tablet/about-tab.webp 1x, ./images/content/tablet/about-tab@2x.webp  2x"
+                type="image/webp" media="(min-width: 768px)">
+            <source srcset="./images/content/tablet/about-tab.jpg 1x, ./images/content/tablet/about-tab@2x.jpg  2x"
+                type="image/jpg" media="(min-width: 768px)">
+            <source srcset="./images/content/mobile/about-mob.webp 1x,  ./images/content/mobile/about-mob@2x.webp 2x"
+                type="image/webp" media="(max-width: 767px)">
+            <source srcset="./images/content/mobile/about-mob.jpg 1x, ./images/content/mobile/about-mob@2x.jpg  2x" type="image/jpg"
+                media="(max-width: 767px)">
             <img src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
         </picture>
         <div>
