--- a/src/sass/layout/_how-we-do.scss
+++ b/src/sass/layout/_how-we-do.scss
@@ -1,4 +1,4 @@
-.how-we-do-container {
+.how-we-do {
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -116,7 +116,7 @@
 }
 
 @media screen and (min-width: 1366px) {
-  .how-we-do-container {
+  .how-we-do {
     padding-top: 130px;
     padding-bottom: 130px;
   }
