Update geometry and optimize code

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -10,13 +10,13 @@
          </li>
          <li class="advantage-item">
             <h3 class="advantage-title">
-               Modern
+               Modern <br>
                teaching methods
             </h3>
          </li>
          <li class="advantage-item">
             <h3 class="advantage-title">
-               Financial guarantee
+               Financial guarantee <br>
                the result
             </h3>
          </li>
