--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,12 +1,12 @@
 .advantages {
-  padding: 43px 0;
+  padding: 30px 0 45px;
 
   @media screen and (min-width: 768px) {
-    padding: 40px 0;
+    padding: 46px 0;
   }
 
-  @media screen and (min-width: 768px) {
-    padding: 108px 0;
+  @media screen and (min-width: 1366px) {
+    padding: 97px 0 130px;
   }
 }
 
@@ -21,26 +21,28 @@
   width: 215px;
   margin: 0 auto;
 
+  color: $primary-black-color;
+
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 26px;
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1365px) {
+    width: calc(100% / 2 - 21px);
+
     &:not(:last-child) {
       margin-right: 21px;
     }
   }
 
   @media screen and (min-width: 1366px) {
-    width: 448px;
-    margin-right: 0;
+    width: calc(100% / 3);
   }
 }
 
-.advantage-item:nth-child(1) {
-
+.advantage-item {
   &::before {
   background-image: url(../images/icons/advantage-icon3.svg);
   content: '';
@@ -55,64 +57,32 @@
   background-position: center;
   background-size: cover;
 
-  @media screen and (min-width: 1366px) {
-    width: 102px;
-    height: 100px;
+    @media screen and (min-width: 1366px) {
+      background-image: url(../images/icons/advantage-icon3-desc.svg);
+      width: 100px;
+      height: 102px;
+    }
   }
-  
-
-  }
-  
 }
 
 .advantage-item:nth-child(2) {
   &::before {
     background-image: url(../images/icons/advantage-icon2.svg);
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-  
-    width: 60px;
-    height: 60px;
-  
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  
-      @media screen and (min-width: 1366px) {
-        width: 102px;
-        height: 100px;
-      }
-      
-  
-    }
 
+      @media screen and (min-width: 1366px) {
+        background-image: url(../images/icons/advantage-icon2-desc.svg);
+      }
+     }
 }
 
 .advantage-item:nth-child(3) {
   &::before {
     background-image: url(../images/icons/advantage-icon1.svg);
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-  
-    width: 60px;
-    height: 60px;
-  
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  
-      @media screen and (min-width: 1366px) {
-        width: 102px;
-        height: 100px;
-      }
-      
-  
-    }
 
+      @media screen and (min-width: 1366px) {
+        background-image: url(../images/icons/advantage-icon1-desc.svg);
+      }
+    }
 }
 
 .advantage-title {
@@ -131,7 +101,6 @@
 
   @media screen and (min-width: 1366px) {
     font-size: 20px;
-    padding-right: 110px;
     padding-left: 90px;
     height: 102px;
   }
