--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,8 +4,7 @@
             <a class="desklogo">HELL<span class="deslogosvg">
                 <svg class="desk-svghead"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg>
-            </span>ENN
+                </svg></span>ENN
             <p class="head-footer">HELLISH<span class="headernav-down"> ENGLISH</span></p>
         </a>
             <ul class="headernav-title hero">
@@ -29,8 +28,7 @@
             <a class="mobile-logo">HELL<span class="mobile-logosvg">
                 <svg class="mobile-svghead"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg>
-            </span>ENN
+                </svg></span>ENN
             <p class="head-footer">HELLISH<span class="mobiledown">ENGLISH</span></p>
         </a>
 
@@ -41,7 +39,7 @@
             </button> 
 
             <ul class="mobilehero hero">
-                <li class="mobile-item"><a class="mobile-link  mobilemenu-current"href="#">Studying program</a></li>
+                <li class="mobile-item"><a class="mobile-link  mobilemenu-current" href="#">Studying program</a></li>
                 <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
                 <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
                 <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
