--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -62,7 +62,7 @@ color: $primary-black-color;
 }
 
 .mobile-header.is-open{
-    opacity: 1;
+    // opacity: 1;
     visibility: visible;
     pointer-events: auto;
 }
@@ -90,23 +90,6 @@ color: $primary-black-color;
     margin-bottom: 50px;
 }
 
-.mobileorder-button{
-    display: block;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 1.21;
-    letter-spacing: 0.14em;
-    text-transform: uppercase;
-    background-color: rgba(17, 21, 24, 0.9);
-    cursor: pointer;
-    color: $accent-color;
-    border: 2px solid $accent-color;
-    padding: 27px 24px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 .mobile-headermenu{
     display: flex;
