--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
         +38 (000) 000 00 00
         </a>
         <object class="instagram" type="image/svg+xml" data="../src/images/icons/instagram.svg">
-            <img class="image-instagram" src="../src/images/icons/instagram.svg" width="40px" height="40px">
+            <img class="image-instagram" alt="instagram" src="../src/images/icons/instagram.svg" width="40" height="40">
         </object>
     </div>
     </div>
