--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,6 +5,7 @@
   line-height: 1.21;
   font-weight: 600;
   letter-spacing: 0.06em;
+  color: $primary-black-color;
   &::after {
     content: '';
     display: block;
@@ -22,6 +23,8 @@
   text-align: left;
 }
 .about-title {
+  font-size: 20px;
+  color: $primary-black-color;
   font-weight: 800;
   line-height: 1.3;
   letter-spacing: 0.03em;
@@ -29,19 +32,15 @@
 }
 .about-name {
   display: block;
+  font-size: 20px;
   font-weight: 800;
   line-height: 1.2;
   padding-top: 10px;
   padding-bottom: 10px;
-
-  &::after {
-    content: '';
-    display: block;
-    background-color: $primary-text-color;
-    height: 1px;
-    width: 280px;
-    margin-top: 20px;
-  }
+  color: $primary-black-color;
+  border-bottom: 1px solid $primary-text-color;
+  margin-bottom: 20px;
+  width: 280px;
 }
 
 .about-link {
@@ -64,7 +63,7 @@
   &::before {
     content: '';
     display: block;
-    background-image: url('../images/icons/sprite.svg#icon-checked');
+    background-image: url('../images/icons/checked.svg');
   }
 }
 .about-check {
@@ -102,14 +101,6 @@
   }
   .about-name {
     padding-top: 0px;
-    &::after {
-      content: '';
-      display: block;
-      background-color: $primary-text-color;
-      height: 1px;
-      width: 401px;
-      margin-top: 20px;
-    }
   }
   .text-descr {
     font-size: 10px;
@@ -127,7 +118,7 @@
     padding-bottom: 15px;
   }
   .about-item {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.55;
   }
   .text-descr {
