--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -38,7 +38,7 @@
     padding-bottom: 23px;
     border-left: 1px dashed #b9b9b9;
   }
-  
+
   &::before {
     position: absolute;
     display: block;
@@ -58,7 +58,7 @@
   }
 }
 
-.guar-text-color {
+.guar-text-accent {
   color: $accent-color;
 }
 
