--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -84,7 +84,8 @@
 
 .about-tumb {
   display: flex;
-  // align-items: baseline;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 480px) {
@@ -107,6 +108,7 @@
   }
   .about-tab {
     display: flex;
+    
   }
   .about-picture {
     margin-right: 40px;
