--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -16,7 +16,7 @@
                 type="image/webp" media="(max-width: 767px)">
             <source srcset="./images/content/mobile/about-mob.jpg 1x, ./images/content/mobile/about-mob@2x.jpg  2x" type="image/jpg"
                 media="(max-width: 767px)">
-            <img  src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
+            <img class="about-picture" src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
         </picture>
         
         <div class="about-tumb">
