--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,5 +1,6 @@
+
 .about-list {
-  list-style: none;
+  
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.21;
@@ -52,7 +53,8 @@
 
 .about-picture {
   margin-bottom: 20px;
-  object-fit: fill;
+  object-fit: contain;
+  width:243px;
 }
 
 .about-item {
@@ -86,6 +88,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 }
 
 @media screen and (min-width: 480px) {
@@ -108,17 +111,23 @@
   }
   .about-tab {
     display: flex;
-    
+    justify-content: space-between;
+   
   }
   .about-picture {
     margin-right: 40px;
   }
   .about-name {
     padding-top: 0px;
+    width: 401px;
   }
   .text-descr {
     font-size: 10px;
     line-height: 2;
+  }
+  .about-picture {
+    
+    width:486px;
   }
 }
 @media screen and (min-width: 1366px) {
@@ -130,6 +139,7 @@
     font-size: 30px;
     margin-bottom: 30px;
     padding-bottom: 15px;
+    width: 640px;
   }
   .about-item {
     font-size: 16px;
@@ -149,5 +159,9 @@
 
   .about-tab {
     justify-content: center;
+  }
+  .about-picture {
+    
+    width: 580px;
   }
 }
