--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -1,4 +1,5 @@
 .benefits {
+  margin-top: -1px;
   background-image: linear-gradient(to bottom, $primary-black-color 64%, $primary-white-color 64%);
 }
 .benefits-container {
