--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -1,5 +1,6 @@
 //------------280-480px-MOBILE-----------------------------------
 .program {
+  margin-bottom: -1px;
   background-color: $primary-black-color;
   padding-top: 50px;
   padding-bottom: 50px;
