--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,4 +1,7 @@
-
+.about {
+  padding-top:20px;
+  padding-bottom:25px;
+}
 .about-list {
   
   margin-bottom: 10px;
@@ -19,8 +22,6 @@
   color: $primary-text-color;
   font-size: 12px;
   line-height: 1.67;
-
-  margin-bottom: 10px;
   text-align: left;
 }
 .about-title {
@@ -53,8 +54,6 @@
 
 .about-picture {
   margin-bottom: 20px;
-  object-fit: contain;
-  width:243px;
 }
 
 .about-item {
@@ -91,10 +90,13 @@
 
 }
 
-@media screen and (min-width: 480px) {
-}
 
 @media screen and (min-width: 768px) {
+  
+  .about {
+    padding-top:65px;
+    padding-bottom:65px;
+  }
   .about-title {
     font-size: 26px;
     margin-bottom: 30px;
@@ -125,9 +127,9 @@
     font-size: 10px;
     line-height: 2;
   }
-  .about-picture {
-    
-    width:486px;
+  
+  .about-tumb {
+  width: 402px;
   }
 }
 @media screen and (min-width: 1366px) {
@@ -148,20 +150,25 @@
   .text-descr {
     font-size: 18px;
     line-height: 1.55;
-    padding-bottom: 35px;
   }
+
   .about-link {
     font-size: 18px;
     line-height: 1.55;
     font-style: normal;
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .about-tab {
     justify-content: center;
+    align-self:star;
   }
-  .about-picture {
-    
-    width: 580px;
-  }
+  .about-tumb {
+    width: 642px;
+    }
+
+    .about-picture {
+      margin-bottom: 0px;
+      margin-right: 30px;
+    }
 }
