delet container in footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-title">
-    <div class="footer-main container">
+    <div class="footer-main">
         <div class="contact">
         <a class="desk-footerlogo">HELL<span class="deslogosvg">
             <svg class="desk-svghead"  width="22" height="30">
