--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -79,7 +79,7 @@
         display: flex;
         align-items: baseline;
         justify-content: space-between;
-        padding: 40px 0;
+        padding: 40px;
     }
     .footer-contact{
         margin: 0;
@@ -103,6 +103,7 @@
 }
 .contact{
 justify-content: unset;
+padding: 52px ;
 
 }
         
