--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -35,7 +35,7 @@
 }
 
 .fotar-end{
-    padding: 22px 26px;
+    padding: 22px;
     background-color: black;
 }
 
@@ -51,8 +51,8 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 2;
-    display: flex;
-    align-items: center;
+    display: block;
+    text-align: center;
     color: #B9B9B9;
 }
 
@@ -79,13 +79,21 @@
         display: flex;
         align-items: baseline;
         justify-content: space-between;
-        padding: 40px 0;
+        padding: 40px;
     }
     .footer-contact{
         margin: 0;
         flex-direction: unset;
 
     }
+
+    .fotar-end{
+        padding: 40px;
+    }
+
+    .avtor{
+    display: flex;
+    align-items: center;}
 
     
 }
@@ -98,11 +106,16 @@
         line-height: 1.23;
 }
 
+.fotar-end{
+    padding: 40px 182px;
+}
+
 .footer-contact{
     margin-left: 225px;
 }
 .contact{
 justify-content: unset;
+padding: 52px 182px;
 
 }
         
