--- a/src/sass/layout/_how-we-do.scss
+++ b/src/sass/layout/_how-we-do.scss
@@ -72,6 +72,7 @@
 .how-we-do-item:hover {
   color: $primary-white-color;
   background-color: $accent-color;
+  cursor: pointer;
 }
 
 .how-we-do-item:hover .how-we-do-item-title::after,
