--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './components/title';
 @import './components/backdrop';
 @import './components/modal';
+@import './components/slider';
 
 @import './layout/header';
 @import './layout/hero';
