change wrong markup of commentaries

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -26,7 +26,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -38,7 +38,7 @@
                         brag that I'm
                         student ... <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -64,7 +64,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -74,7 +74,7 @@
                         earum
                         reprehenderit optio facilis. Aliquid. <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -100,7 +100,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -114,7 +114,7 @@
                         brag that I'm
                         student ... <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -140,7 +140,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -150,7 +150,7 @@
                         earum
                         reprehenderit optio facilis. Aliquid. <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -176,7 +176,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -190,7 +190,7 @@
                         brag that I'm
                         student ... <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -216,7 +216,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -226,7 +226,7 @@
                         earum
                         reprehenderit optio facilis. Aliquid. <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
             <li class="comments-item">
                 <div class="left-side-review">
@@ -252,7 +252,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="text-box">
+                <article class="text-box">
                     <h3 class="commentators-name">Tonya Kucherovskaya</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
@@ -266,7 +266,7 @@
                         brag that I'm
                         student ... <a class="comments-link" href="#">Read more</a>
                     </p>
-                </div>
+                </article>
             </li>
         </ul>
         <ul class="slider list">
