--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,15 +1,15 @@
 
 <section class="guar">
 <div class=" container">
-    <h2 class="guar-titel">We guarantee</h2>
+    <h2 class="guar-titel black-title title ">We guarantee</h2>
     
 
 <ul class="guar-list">
-    <li class="guar-item">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your
-    money <span class="guar-text-accent">* </span></li>
-    <li class="guar-item"> You will learn to write essays with at least 10 points out of 14. <span class="guar-text-color"> While 20% of the students received 0 for essays. </span></li>
-    <li class="guar-item"> You will study in your area. We will choose the location for the classes after the teams have been formed.</li>
-    <li class="guar-item"> Teams will be formed based on the starting level of the students. We take into account the characteristics of each
+    <li class="guar-item black-title ">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your
+    money. <span class="guar-text-accent">* </span></li>
+    <li class="guar-item black-title "> You will learn to write essays with at least 10 points out of 14. <span class="guar-text-accent"> While 20% of the students received 0 for essays. </span></li>
+    <li class="guar-item black-title "> You will study in your area. We will choose the location for the classes after the teams have been formed.</li>
+    <li class="guar-item black-title "> Teams will be formed based on the starting level of the students. We take into account the characteristics of each
     student.</li>
 </ul>
          </div>
