--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -4,7 +4,7 @@
 }
 
 .guar-list {
-  padding: 50px 20px 50px 20px;
+  padding: 50px 20px;
   background-color: #f1f1f1;
   list-style: none;
   margin-bottom: 30px;
@@ -12,14 +12,9 @@
 
 .guar-titel {
   font-size: 26px;
-  font-weight: 800;
-  line-height: 1.3;
-  letter-spacing: 0.03em;
-  font-style: normal;
   text-align: center;
-  color: $primary-black-color;
   margin-bottom: 30px;
-  margin-top: 50px;
+ 
 }
 
 .guar-item {
@@ -31,7 +26,7 @@
   line-height: 1.67;
   letter-spacing: 0.03em;
   font-style: normal;
-  color: $primary-black-color;
+  
   text-align: left;
 
   &:not(:last-child) {
@@ -76,7 +71,7 @@
     padding: 50px 112px 45px 112px;
   }
   .guar-titel {
-    font-size: 46px;
+   font-size: 46px;
   }
   .guar-item {
     font-size: 20px;
