add border for current image

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -269,64 +269,77 @@
                 </article>
             </li>
         </ul>
-        <ul class="slider list">
-            <li class="slider-item">
-                <picture>
-                    <source 
-                     srcset="./images/content/mobile/reviews-img-1.webp 1x, ./images/content/mobile/reviews-img-1@2x.webp 2x" type="image/webp">
-                    <source
-                     srcset="./images/content/mobile/reviews-img-1.png 1x, ./images/content/mobile/reviews-img-1@2x.png 2x">
-                <img src="./images/content/mobile/reviews-img-1.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-2.webp 1x, ./images/content/mobile/reviews-img-2@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-2.png 1x, ./images/content/mobile/reviews-img-2@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-2.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-3.webp 1x, ./images/content/mobile/reviews-img-3@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-3.png 1x, ./images/content/mobile/reviews-img-3@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-3.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-4.webp 1x, ./images/content/mobile/reviews-img-4@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-4.png 1x, ./images/content/mobile/reviews-img-4@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-4.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-5.webp 1x, ./images/content/mobile/reviews-img-5@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-5.png 1x, ./images/content/mobile/reviews-img-5@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-5.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-6.webp 1x, ./images/content/mobile/reviews-img-6@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-6.png 1x, ./images/content/mobile/reviews-img-6@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-6.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-            <li class="slider-item">
-                <picture>
-                    <source srcset="./images/content/mobile/reviews-img-7.webp 1x, ./images/content/mobile/reviews-img-7@2x.webp 2x"
-                        type="image/webp">
-                    <source srcset="./images/content/mobile/reviews-img-7.png 1x, ./images/content/mobile/reviews-img-7@2x.png 2x">
-                    <img src="./images/content/mobile/reviews-img-7.png" alt="фото девушки-комментатора">
-                </picture>
-            </li>
-        </ul>
+            <ul class="slider list">
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-7.webp 1x, ./images/content/mobile/reviews-img-7@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-7.png 1x, ./images/content/mobile/reviews-img-7@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-1.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-1.webp 1x, ./images/content/mobile/reviews-img-1@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-1.png 1x, ./images/content/mobile/reviews-img-1@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-2.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-3.webp 1x, ./images/content/mobile/reviews-img-3@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-3.png 1x, ./images/content/mobile/reviews-img-3@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-3.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-4.webp 1x, ./images/content/mobile/reviews-img-4@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-4.png 1x, ./images/content/mobile/reviews-img-4@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-4.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-5.webp 1x, ./images/content/mobile/reviews-img-5@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-5.png 1x, ./images/content/mobile/reviews-img-5@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-5.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-6.webp 1x, ./images/content/mobile/reviews-img-6@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-6.png 1x, ./images/content/mobile/reviews-img-6@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-6.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+                <li class="slider-item">
+                    <picture>
+                        <source
+                            srcset="./images/content/mobile/reviews-img-2.webp 1x, ./images/content/mobile/reviews-img-2@2x.webp 2x"
+                            type="image/webp">
+                        <source
+                            srcset="./images/content/mobile/reviews-img-2.png 1x, ./images/content/mobile/reviews-img-2@2x.png 2x">
+                        <img class="slider-image" src="./images/content/mobile/reviews-img-7.png" alt="фото девушки-комментатора">
+                    </picture>
+                </li>
+            </ul>
     </div>
 </section>
