--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -5,8 +5,14 @@ $primary-white-color: #ffffff;
 $primary-black-color: #111518;
 $primary-text-color: #b9b9b9;
 $secondary-text-color: #3d3d3d;
+$backdrop: rgba(17, 21, 24, 0.9);
 
 //shadows
 
 $hero-shadow-color: rgba(0, 0, 0, 0.04);
 $cards-shadow-color: rgba(0, 0, 0, 0.1);
+
+//transition
+$backdrop-transition: cubic-bezier(0.4, 0, 0.2, 1);
+$modal-form: cubic-bezier(0.4, 0, 0.2, 1);
+$modal-time: 250ms;
