--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
         </button>
     </div>
 
-    <div class="mobile-header is-open">
+    <div class="mobile-header is-open" data-menu>
         <div class="mobile-headermenu container">
             <a class="mobile-logo">HELL<span class="mobile-logosvg">
                 <svg class="mobile-svghead"  width="22" height="30">
