--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -62,7 +62,7 @@ color: $primary-black-color;
 }
 
 .mobile-header.is-open{
-    // opacity: 1;
+    opacity: 1;
     visibility: visible;
     pointer-events: auto;
 }
