--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-title">
     <div class="footer-main">
-        <div class="contact">
+        <div class="contact container">
         <a class="desk-footerlogo">HELL<span class="deslogosvg">
             <svg class="desk-svghead"  width="22" height="30">
                 <use href="../src/images/icons/sprite.svg#icon-fire"></use>
