add cursor: pointer for aroows

--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -37,6 +37,7 @@
   z-index: 1;
   border: none;
   background-color: inherit;
+  cursor: pointer;
 }
 /* Стрелка влево */
 .slick-arrow.slick-prev {
