--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages animate__pulse">
 <div class="container">
       <h2 class="title visually-hidden">Advantages</h2>
       <ul class="advantage-list list">
