--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,17 @@
 <section class="hero">
    <div class="container hero-container">
       <div class="hero-content">
-         <h1 class="hero-title">
-            Complex preparation for English UPE
-         </h1>
-         <p class="hero-text">It won’t be easy.</p>
-         <b class="hero-guarantee">
-            But you’re guaranteed to get <br>
-            <span class="hero-guarantee-accent">+25 points</span>
-         </b>
-         <a class="button hero-button link" href="#registration">i want a free lesson</ф>
+        <div class="hero-text-block _anim-items _anim-no-hide">
+             <h1 class="hero-title ">
+                Complex preparation for English UPE
+             </h1>
+             <p class="hero-text">It won’t be easy.</p>
+             <b class="hero-guarantee">
+                But you’re guaranteed to get <br>
+                <span class="hero-guarantee-accent">+25 points</span>
+             </b>
+        </div>
+         <a class="button hero-button link _anim-items _anim-no-hide" href="#registration">i want a free lesson</ф>
       </div>
       
       <div class="hero-wrapper">
