--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -3,23 +3,23 @@
         <h2 class="problems-title title white-title">The main problems of students<br>in English UPE, which<br> we <span
                 class="title-accent-word">help</span> to solve</h2>
         <div class="problems-list-block">
-            <ol class="problems-list list">
-                <li class="problems-item">
+            <ol class="problems-list list _anim-items">
+                <li class="problems-item _anim-show">
                     Grammar
                 </li>
-                <li class="problems-item">
+                <li class="problems-item _anim-show">
                     Inability to understand spoken English
                 </li>
-                <li class="problems-item">
+                <li class="problems-item _anim-show">
                     Stingy vocabulary for writing an essay
                 </li>
-                <li class="problems-item">
+                <li class="problems-item _anim-show">
                     Preparing alone
                 </li>
-                <li class="problems-item">
+                <li class="problems-item _anim-show">
                     Lack of a single knowledge resource
                 </li>
-                <li class="problems-item">
+                <li class="problems-item _anim-show">
                     Lack of self-organization and laziness
                 </li>
             </ol>
