--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import './base/common';
 @import './base/container';
+@import './base/animation';
 
 @import './components/logo';
 @import './components/button';
