--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -18,8 +18,6 @@
   height: 30px;
   right: 8px;
   top: 8px;
-  border-radius: 50%;
-  //border: 1px solid rgba(0, 0, 0, 0.1);
   border: none;
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
@@ -44,22 +42,16 @@
 }
 @media screen and (min-width: 1024px) {
   .modal__order-service {
-    // position: absolute;
-    //left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
   }
 }
 @media screen and (min-width: 1200px) {
   .modal__order-service {
-    // position: absolute;
-    // left: 50%;
-    //  top: 50%;
-    //  transform: translate(-50%, -50%);
     width: 528px;
   }
 }
-//-----------------------------------------------------------------------------
+//-----------------------------------
 .modal__appeal {
   font-weight: bold;
   font-size: 20px;
@@ -77,9 +69,8 @@
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-
-  &:nth-child(-n + 3) {
-    margin-bottom: 10px;
+  &:nth-child(-n + 2) {
+    margin-bottom: 5px;
   }
 }
 .modal__form-wrapper {
@@ -95,7 +86,6 @@
   height: 40px;
   padding-left: 42px;
   transition: border-color $modal-time $modal-form;
-
   &:focus {
     border-color: $accent-color;
     outline: none;
@@ -114,7 +104,6 @@
     fill: $accent-color;
   }
 }
-
 .modal__form-text {
   margin-top: 4px;
   width: 100%;
@@ -125,15 +114,13 @@
   padding: 12px 16px;
   resize: none;
   transition: border-color $modal-time $modal-form;
-
   &::placeholder {
-    font-family: Roboto;
+    font-family: inherit;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.01em;
-
     color: rgba(117, 117, 117, 0.5);
   }
   &:focus {
@@ -145,25 +132,24 @@
 .modal__form-submit-btn {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 30px;
   border: none;
-  width: 200px;
+  width: 180px;
   min-height: 50px;
-  background: $accent-color;
+  background: #ff6b09e3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  // border-radius: 4px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.08em;
   color: #ffffff;
   transition: background-color $modal-time $modal-form;
-
   &:focus,
   &:hover {
     background-color: $accent-color;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
 }
-
 @media screen and (min-width: 1200px) {
   .modal__appeal {
     line-height: 1.15;
